
2009-04-11 14:38 Ali aliov@xfce.org 
	 * : Fix brightness buttons issue

2009-04-11 11:26 Ali aliov@xfce.org 
	 * : Fix notification timeouts when using xfce4-notifyd+minor clean up of some unused includes

2009-04-10 23:31 Ali aliov@xfce.org 
	 * : Making the settings dialog pluggable+use the shutdown interface on the xfce4-session to shutdown

2009-04-10 21:29 Ali aliov@xfce.org 
	 * : Added handler for power button+added option to ask the session manager to its show the exit dialog

2009-04-10 19:53 Ali aliov@xfce.org 
	 * : Change the session restart style to if running when we are exiting

2009-04-10 16:15 Ali aliov@xfce.org 
	 * : Fix the session restart command in the previous revision

2009-04-10 16:00 Ali aliov@xfce.org 
	 * : Connect to the session using libxfcegui4 and properly shutdown when the session dies

2009-04-10 12:24 Ali aliov@xfce.org 
	 * : Provide a wake up signal to avoid possible multiple sleep/hibernate request

2009-04-10 12:00 Ali aliov@xfce.org 
	 * : Fall back to HAL in case we fail to map X11 keys

2009-04-08 17:45 Ali aliov@xfce.org 
	 * : Fix some Glib warnings

2009-04-08 13:45 Ali aliov@xfce.org 
	 * : Properly unref the device object when battery is removed+fix shutdown callback

2009-04-08  0:23 Ali aliov@xfce.org 
	 * : Fix issue with battery ref count that was causing a crash when hald restarts

2009-04-07 13:23 Ali aliov@xfce.org 
	 * : Implement a clean way to restart HAL related objects when HALD restarts

2009-04-07 11:16 Ali aliov@xfce.org 
	 * : Updates on the brightness plugin to act like a menu so it will close the popup when it doesn't have input focus

2009-04-06 19:47 Ali aliov@xfce.org 
	 * : Fix some typos

2009-04-06 16:06 Ali aliov@xfce.org 
	 * : Correct tooltip in the brightness plugin

2009-04-06 14:37 Ali aliov@xfce.org 
	 * : Change brightness on scroll mouse events

2009-04-06 10:54 Ali aliov@xfce.org 