@@ -1,4 +1,7 @@
 
+2009-04-11 16:48 Ali aliov@xfce.org 
+	 * : Patch for the xfpm-button-hal from Mike Massonnet
+
 2009-04-11 14:38 Ali aliov@xfce.org 
 	 * : Fix brightness buttons issue
 
